fix overflow text bounty

--- a/app/stylus/blocks/panel.styl
+++ b/app/stylus/blocks/panel.styl
@@ -130,6 +130,7 @@
         padding-left 0
         list-style none
         font-size-func(24)
+        hyphens()
 
         a
             display block
@@ -181,6 +182,9 @@
                 @media (min-width 480px)
                     padding 14px 20px 13px 10px
 
+                    p
+                        max-width 40px
+
             &__user
                 border-radius 5px
                 padding 7px 20px 7px 5px
@@ -227,6 +231,12 @@
 
                 p
                     max-width 75px
+
+                    @media (min-width 480px)
+                        max-width 165px
+
+                    @media (min-width 768px)
+                        max-width 300px
 
             &__menu
                 background-color white
